--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "author": "",
@@ -16,5 +15,8 @@
     "express": "^4.19.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.9.6"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
